--- a/src/style.css
+++ b/src/style.css
@@ -1,57 +1,67 @@
 body{
     font-family: 'Montserrat';
     padding: 15px;
-    background-image: url("https://besthqwallpapers.com/Uploads/13-2-2021/154552/thumb2-blackboard-school-texture-blackboard-background-gray-texture-blackboard-texture.jpg");
+    background-image: url("https://us.123rf.com/450wm/peekeedee1/peekeedee11710/peekeedee1171000152/87926975-textura-de-madera-negro-o-textura-de-fondo-de-patr%C3%B3n-de-madera.jpg?ver=6");
     height: 200%;
     width: 100%;
     color: #f8f9fa;
 }
 
 header {
-    width: 100%;
-    height: 80%;
-    padding: 0;
-    margin: 0;
-    color: #f8f9fa;
-    list-style: none;
+    background: url(https://i.pinimg.com/236x/3a/0b/3b/3a0b3b9fe6848dc6d095cee1ebccccc7--fall-backgrounds-iphone-wallpaper-backgrounds.jpg);
 }
 
-header nav {
-    display: flex;
+h1 {
+    color: #f8f9fa;
     justify-content: flex-end;
-}
-
-.nav-left-section {
-list-style: none;
-justify-self: left;
-display: flex;
-align-items: center;
-width: 250px;
-height: 5px;
-}
-
-
-
-.nav-right-section {
-    justify-self: right;
-    width: 250px;
-    height: 5px;
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    align-items: center;
-}
-
-nav .nav-right-section a {
-    margin-right: 10px;
-    color: #f8f9fa;
-}
-
-header h1 {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    margin: 15px;
     margin-bottom: 3px;
-    margin-top: 0;
+    margin-top: 20px;
+    text-align: justify;
+    font-size: 40px;
 }
 
+.header_logo {
+    float: right;
+    text-align: right;
+    border: none;
+    margin-top: -100px;
+    margin-right: 30px; 
+  }
+  
+  .header img {
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    box-shadow: 5px 4px 8px grey;
+    background-size: 100% auto;
+  }
+  
+
+.nav-right-section a {
+    width: 200px;
+    height: 5px; 
+    justify-content: right;
+    align-items: center;
+    color: #f8f9fa;
+    list-style: none;
+    display: inline-block;
+}
+
+ul {
+    list-style: none;
+    font-size: 20px;    
+}
+
+#menu {
+    margin-top: 0px;
+    font-size: x-large;
+}
 
 .Hamburguesa_foto{
     max-width: 50%;
@@ -61,25 +71,12 @@ header h1 {
 
 .information {
     width: 20%;
-    display: inline-block;
+    display: inline-flex;
     font-size: 20px;
     height: 100%;
     margin-top: 90px;
     margin-left: 30px;
     color:rgb(29, 28, 28);
-}
-
-
-.pago-tc {
-    display: inline-block;
-    vertical-align: top;
-    font-size: 10px;
-    margin-top: 10px;
-    border: 1px solid gray;
-    width: 200px;
-    height: 200px;
-    line-height: 120px;
-    text-align: center;
 }
 
 .information-table {
@@ -104,35 +101,26 @@ header h1 {
     text-align: left;
 }
 
-footer {
+
+ul {
+    display: inline;
+}
+
+li{
+    float: none;
+    margin-left: 30px;
+}
+.barra-inferior {
     width: 100%;
     height: 80px;
-    position: absolute;
     bottom: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: auto;
     font-size: 15px;
     color: #f8f9fa;
-}
-
-footer ul {
-    margin: 10px;
-    list-style: none;
     display: flex;
-    padding-left: 0; 
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
+    justify-content: left;
+    margin-top: 50px;
 }
 
-footer .footer-right {
-    justify-self: right;
-}
-
-footer ul li a {
-    margin: 20px;
-    color: #f8f9fa;
-}
 
 .image2 {
     width: 60px;
@@ -143,3 +131,4 @@ footer ul li a {
     width: 60px;
     height: 80px;   
 }
+
